img ret menu done

--- a/drinkskort.html
+++ b/drinkskort.html
@@ -166,7 +166,7 @@
 
                 <!--------------- IMG DRINK -------------->
                 <div>
-                    <img class="drinks_img" src="img/drink.webp" alt="billede af aperol spritz" />
+                    <img class="drinks_img" src="./img/drink.webp" alt="billede af aperol spritz" />
                 </div>
             </div>
             <!----------------- SOFT DRINKS ---------------->
