--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <main>
         <div class="forside_img_relative">
-            <img class="forside_img" src="img/Chum_forside.webp" alt="billede af chums vin og ost" />
+            <img class="forside_img" src="./img/Chum_forside.webp" alt="billede af chums vin og ost" />
             <div class="forside_h1_p_absolute">
                 <h1 class="forside_h1">CHUMS</h1>
                 <h2 class="forside_h2">Winebar & Bistro</h2>
