--- a/madkort.html
+++ b/madkort.html
@@ -97,7 +97,7 @@
             <!------------------ IMG -------------->
             <div class="grid_1-1_cheese">
                 <div>
-                    <img class="cheese_img" src="img/menukort2.webp" alt="billede af ostefondue">
+                    <img class="cheese_img" src="./img/menukort2.webp" alt="billede af ostefondue">
                 </div>
                 <!----------------- WARM CHEESE ------------------->
                 <div id="cheese">
@@ -281,7 +281,7 @@
                     </ul>
                 </div>
                 <div>
-                    <img class="tapas_img" src="img/menukort1.webp" alt="billede af brød, tapas og ost" />
+                    <img class="tapas_img" src="./img/menukort1.webp" alt="billede af brød, tapas og ost" />
                 </div>
             </div>
 
