--- a/menukort.html
+++ b/menukort.html
@@ -149,8 +149,8 @@
 
             <div class="grid_1-2">
                 <div class="menu_item">
-                    <img class="italy_img1" src="img/italy_1.webp" alt="billede af italiensk vinmark og en vin">
-                    <img class="italy_img2" src="img/italy_2.webp" alt="billede af hånd de rholder en italiensk vin">
+                    <img class="italy_img1" src="./img/italy_1.webp" alt="billede af italiensk vinmark og en vin">
+                    <img class="italy_img2" src="./img/italy_2.webp" alt="billede af hånd de rholder en italiensk vin">
                 </div>
 
                 <!--------------- ITALY --------------->
@@ -537,15 +537,15 @@
                 <!---------------- IMG RHONE --------------->
 
                 <div>
-                    <img class="rhone_img1" src="img/druer.webp" alt="billeder af vindruer">
-                    <img class="rhone_img2" src="img/rhone_valley.webp" alt="billede af rhone vinmark">
+                    <img class="rhone_img1" src="./img/druer.webp" alt="billeder af vindruer">
+                    <img class="rhone_img2" src="./img/rhone_valley.webp" alt="billede af rhone vinmark">
                 </div>
             </div>
 
             <!-------------- IMG SPAIN -------------->
             <div class="grid_1-1_spain">
                 <div>
-                    <img class="spain_img" src="img/spain.webp" alt="billede af bord med vin og vinkøler">
+                    <img class="spain_img" src="./img/spain.webp" alt="billede af bord med vin og vinkøler">
                 </div>
 
                 <!--------------- SPAIN ------------>
